[3.8] bpo-42425: Fix possible leak in initialization of errmap for OSError (GH-23446). (cherry picked from commit ed1007c0d74e658d1e6c9b51b12ce7501eb8cbf9)

Co-authored-by: Serhiy Storchaka <storchaka@gmail.com>